parsing is getting there, OO mysql

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         }
     },
     "require": {
-        "doctrine/lexer": "^1.0"
+        "doctrine/lexer": "^1.0",
+        "monolog/monolog": "^1.24"
     }
 }
